--- a/play-edge-classic/push-manifest.json
+++ b/play-edge-classic/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.f75ed.css":{"type":"style","weight":1},"bundle.19992.esm.js":{"type":"script","weight":1}}}
+{"/":{"bundle.e004e.css":{"type":"style","weight":1},"bundle.c35fb.esm.js":{"type":"script","weight":1}}}
