--- a/play-edge-classic/push-manifest.json
+++ b/play-edge-classic/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.e004e.css":{"type":"style","weight":1},"bundle.dd3e2.esm.js":{"type":"script","weight":1}}}
+{"/":{"bundle.4f938.css":{"type":"style","weight":1},"bundle.1a5c7.esm.js":{"type":"script","weight":1}}}
